--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-server": "8.2.14",
     "@angular/router": "8.2.14",
     "ajv": "6.10.2",
+    "apexcharts": "^3.10.1",
     "arrive": "2.4.1",
     "bootstrap": "4.4.1",
     "bootstrap-material-design": "4.1.2",
