--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jquery": "3.4.1",
     "jsencrypt": "^3.0.0-rc.1",
     "moment": "2.24.0",
+    "ng-apexcharts": "^1.1.1",
     "ngx-toastr": "^11.2.1",
     "perfect-scrollbar": "1.4.0",
     "popper.js": "1.16.0",
